--- a/dev/assets/scss/styles.scss
+++ b/dev/assets/scss/styles.scss
@@ -30,13 +30,12 @@
 /*  Module
 /*========================================*/
 
-// @import "module/grid";
-// @import "module/tile";
-// @import "module/ttl";
-// @import "module/btn";
-// @import "module/card";
-// @import "module/table";
-// @import "module/media";
+@import "module/grid";
+@import "module/tile";
+@import "module/ttl";
+@import "module/btn";
+@import "module/card";
+@import "module/table";
 
 // utility
 @import "utility/temp";
