--- a/dev/docs/_index.scss
+++ b/dev/docs/_index.scss
@@ -1,4 +1,6 @@
-
+// hologram書き出し用のドキュメントです
+// モジュールごとに書くとコンパイルされたCSSにコメントが残るのが嫌なので
+// このファイル内で1ページ分をまとめて書いてます
 
 /*doc
 ---
@@ -27,7 +29,7 @@ category: index
 ---
 
 - Windows
-  - IE9/11
+  - IE11
   - edge
   - Firefox(最新版)
   - Chrome(最新版)
@@ -40,7 +42,7 @@ category: index
 - iOS8+
   - Safari
 
-- Android 4.2+(4.3を除く)
+- Android 4.4+
   - Android Browser
   - Chrome
 */
@@ -54,30 +56,36 @@ category: index
 ---
 
 ## ディレクトリについて
-- xxxxx.co.jp
-    - [ xxx ] - 各HTML用ディレクトリ。MTから生成・アップロードしたもの
-    - [ assets ] - 画像やCSSなどのリソースをまとめます
-        - [ css ]
-            - styles.css - サイトで共通で使われるCSSファイル
-            - xxxxx.css - 特定のページやカテゴリだけで使用されるcss
-        - [ js ]
-            - [ lib ] - jQueryなどのライブラリ・プラグインはここに入れる
-            - common.js - サイトで共通で使われるJSファイル
-            - xxxxx.js - 特定のページやカテゴリだけで使用されるjs(多い場合はフォルダにする)
-        - images
-            - [common] … サイトで共通で使われる画像ファイルを格納
-            - [xxxxx] … 特定のページやカテゴリだけで使用される画像を格納
-        - fonts - アイコンフォント
+<pre>
+xxxxx.co.jp
+│
+├─ xxx … 各HTML用ディレクトリ。
+│
+└─ assets … 画像やCSSなどのリソースをまとめます
+   ├─ css
+   │  ├─ styles.css … サイトで共通で使われるCSSファイル
+   │  └─ xxxxx.css … 特定のページやカテゴリだけで使用されるcss
+   │
+   ├─ js
+   │  ├─ lib … jQueryなどのライブラリ・プラグインはここに入れる
+   │  ├─ common.js … サイトで共通で使われるJSファイル
+   │  └─ xxxxx.js … 特定のページやカテゴリだけで使用されるjs(多い場合はフォルダにする)
+   │
+   ├─ images
+   │  ├─ common … サイトで共通で使われる画像ファイルを格納
+   │  └─ xxxxx … 特定のページやカテゴリだけで使用される画像を格納
+   │
+   └─ fonts … アイコンフォント
+</pre>
 
-サイトで利用されるリソースはルート直下の 「assets」 ディレクトリ内に格納します。
+サイトで利用されるリソースはルート直下の 「assets」 ディレクトリ内に格納します。<br>
+ただし、CMSやツールで生成・アップロードされるリソースに関しては別とします。
 
-ただし、CMSで生成・アップロードされるリソースに関しては別とします。
-
-#### 記述規則
-ファイル名、ディレクトリ名には半角英数字を使用します。
-全角文字、大文字の使用は原則禁止とします。
-
+### 記述規則
+ファイル名、ディレクトリ名には半角英数字を使用。<br>
+全角文字、大文字の使用は原則禁止。
 */
+
 
 /*doc
 ---
@@ -88,26 +96,36 @@ category: index
 
 ### 命名規則
 
-- スタイルはIDを使わずにクラスを使用します。
-IDはアンカーリンクやjsの動作用にのみ使用します。
+- スタイルはidを使わずにclassを使用。<br>
+idはアンカーリンクやJavaScriptの動作用にのみ使用。
 
-- BEM を採用するがその限りでない。クラス名はキャメルケースとし、エレメントの区切り文字には `_` を、モディファイアの区切り文字には `-` を使用する。
+- `BEM` を採用しますが、その限りではない。<br>
+クラス名はキャメルケースとし、エレメントの区切り文字には `_` を、モディファイアの区切り文字には `-` を使用。<br>
+ex: `mainBlock_element-modifier`
 
 - 一部のクラスには、接頭辞をつける（SMACSS・FLOCSSを参考に）
     - `l-` レイアウト用のクラス
-    - `is-` 状態を表すクラス。単体では使わずにマルチクラスの時だけスタイルをつけるようにする。
-  JavaScriptを使用して状態が変わるものなどに使用。ex: ` is-current ` `is-open`
+    - `is-` 状態を表すクラス。単体では使わずにマルチクラスの時だけスタイルをつけるようにする。<br>
+        JavaScriptを使用して状態が変わるものなどに使用。<br>
+        ex: ` is-current ` `is-open`
     - `js-` JavaScriptで使用されるタグに使用。原則、スタイルはつけずに装飾は別のクラスを使って行う。
 
-- Sassを使用しています。
+- Sass(Scss記法)を使用。
+
+### 設計について
+モジュール(BEMでいうBlock)にはmarginやpositionなどの位置を指定するプロパティは出来るだけ記述しない。
+モジュールは、どの場所にもおけることを前提としているので、想定外のところで干渉して問題が起こらないように、モジュールとレイアウト用のクラスを組み合わせて、ページを組んでいくようにする。
+
+ただ、やりすぎるとHTMLにスタイル書いてるのと変わらないので、マルチクラスで4個も5個もクラス指定が入るようなら、別のモジュールに出来ないか、デザイン上の設計に問題がないかなどを考える。
+
 
 ### レイアウトやモジュールの参考
 
 - [CSSレイアウト](./layout.html)
-
 - [CSSモジュール](./components.html)
 
 */
+
 
 /*doc
 ---
@@ -122,46 +140,74 @@ category: index
 
 - [ xs ] 〜511px ( スマートフォン縦 )
 - [ sm ] 512px 〜 767px ( スマートフォン横・小さいタブレットの縦 )
-- [ md ] 768px 〜 1019px（ タブレット・ノートPCなど ）
-- [ lg ] 1020PX（ ワイドスクリーンのPC ）
-  - 1020px以上は余白が広がる仕様で、最大コンテンツ幅は1020px(余白なしで980px)
+- [ md ] 768px 〜 1023px（ タブレット・ノートPCなど ）
+- [ lg ] 1024PX（ ワイドスクリーンのPC ）
+  - 1024px以上は余白が広がる仕様で、最大コンテンツ幅は1020px(余白なしで980px)
 
 ### 用意しているSass変数
 - `$xs-max` : 511px;
 - `$sm-min` : 512px;
 - `$sm-max` : 767px;
 - `$md-min` : 768px;
-- `$md-max` : 1019px;
-- `$lg-min` : 1020px;
+- `$md-max` : 1023px;
+- `$lg-min` : 1024px;
 
 ### メディアクエリ記述サンプル
 
-メディアクエリの記述順序はモバイルファーストとする。
+メディアクエリの記述順序はモバイルファーストとする。<br>
 
-`min-width`で指定をする場合は、印刷対策として`print`も設定。
-印刷するのは、PCで見てる場合などの大きいサイズが想定されるため。
-
+`min-width`で指定をする場合は、印刷対策として`print`も設定。印刷するのは、PCで見てる場合などの大きいサイズが想定されるため。<br>
 逆に`max-width`で指定をする場合は、`print`を設定しない。
 
-
-
+#### 通常の書き方
 <pre>
 // xsサイズ ( スマートフォン縦 ) 用の記述
+.sample { ... }
 
-@media print, screen and (min-width: $sm-min) {
-    // smサイズ ( スマートフォン横・小さいタブレットの縦 ) 用の記述
+@media print, screen and (min-width: 512px) {
+  // smサイズ ( スマートフォン横・小さいタブレットの縦 ) 用の記述
+  .sample { ... }
 }
 
-@media print, screen and (min-width: $md-min) {
-    // mdサイズ （ タブレット・ノートPCなど ） 用の記述
+@media print, screen and (min-width: 768px) {
+  // mdサイズ （ タブレット・ノートPCなど ） 用の記述
+  .sample { ... }
 }
 
-@media print, screen and (min-width: $md-min) {
-    // lgサイズ（ ワイドスクリーンのPC ）用の記述
+@media print, screen and (min-width: 1024px) {
+  // lgサイズ（ ワイドスクリーンのPC ）用の記述
+  .sample { ... }
 }
 
-@media screen and (max-width: $sm-max) {
-    // mdサイズより小さいサイズ用の記述
+@media screen and (max-width: 511px) {
+  // mdサイズより小さいサイズ用の記述
+  .sample { ... }
+}
+</pre>
+
+#### SassのMixinと変数を使用
+<pre>
+// xsサイズ ( スマートフォン縦 ) 用の記述
+.sample { ... }
+
+@include mq(smMin) {
+  // smサイズ ( スマートフォン横・小さいタブレットの縦 ) 用の記述
+  .sample { ... }
+}
+
+@include mq(mdMin) {
+  // mdサイズ （ タブレット・ノートPCなど ） 用の記述
+  .sample { ... }
+}
+
+@include mq(lgMin) {
+  // lgサイズ（ ワイドスクリーンのPC ）用の記述
+  .sample { ... }
+}
+
+@include mq(smMax) {
+  // mdサイズより小さいサイズ用の記述
+  .sample { ... }
 }
 </pre>
 
@@ -175,11 +221,20 @@ name: 05-javascript
 category: index
 ---
 
+### 使用ライブラリ
+- jQuery(3.1.1)
+- xxxxx
 
-- ライブラリはjQuery(2系)を使用しています。
-- 命名は変数・関数ともにキャメルケースで書く
-- 出来る限りわかりやすく書く。わかりづらいところはコメントなどを書く
-- グローバル変数は出来る限り使わない
+### 使用プラグイン
+- [xxxxx](xxxxxx)
+  - xxxで使用
+- [xxxxx](xxxxxx)
+  - xxxで使用
+
+### 記述規則
+- 命名は変数・関数ともにキャメルケースで書く。
+- 出来る限りわかりやすく書く。わかりづらいところはコメントを書く。
+- グローバル変数は出来る限り使わない。
 
 */
 
@@ -191,11 +246,23 @@ name: 06-font
 category: index
 ---
 
-- GoogleFontを使用しています
-- アイコンフォントを作成して使用しています
+アイコンフォントを作成して使用。
 
 [アイコンフォント一覧](./icon.html)
 
 */
 
+
+/*doc
+---
+title: 開発環境について
+name: 07-dev
+category: index
+---
+
+ビルドツールはGulpを使用。
+
+詳細はリポジトリ直下のREADMEを参照。
+
+*/
 
