--- a/dev/assets/scss/module/_ttl.scss
+++ b/dev/assets/scss/module/_ttl.scss
@@ -1,34 +1,24 @@
 .ttl-lg {
-    font-weight: normal;
-    font-size: 1.9rem;
+    font-weight: bold;
+    font-size: 2.1rem;
     line-height: 1.3;
-    vertical-align: middle;
-    span {
-        font-size: 1.2rem;
-        margin-left: 5px;
-        display: inline-block;
-        vertical-align: middle;
-    }
 }
 
-@media print, screen and (min-width: $md-min) {
+@include mq(mdMin) {
     .ttl-lg {
-        font-size: 2.6rem;
-        span {
-            font-size: 1.4rem;
-        }
+        font-size: 2.8rem;
     }
 }
 
 .ttl-md {
     font-weight: normal;
-    font-size: 1.7rem;
+    font-size: 1.8rem;
     line-height: 1.3;
 }
 
-@media print, screen and (min-width: $md-min) {
+@include mq(mdMin) {
     .ttl-md {
-        font-size: 2rem;
+        font-size: 2.1rem;
     }
 }
 
