--- a/dev/assets/scss/utility/_helper.scss
+++ b/dev/assets/scss/utility/_helper.scss
@@ -4,7 +4,7 @@
 .mb-lg { margin-bottom: 30px !important; }
 .mb-xl { margin-bottom: 40px !important; }
 
-@media print, screen and (min-width: $md-min) {
+@include mq(mdMin) {
     .mb-xs { margin-bottom: 10px !important; }
     .mb-sm { margin-bottom: 20px !important; }
     .mb-md { margin-bottom: 30px !important; }
@@ -18,7 +18,7 @@
 .mt-lg { margin-top: 30px !important; }
 .mt-xl { margin-top: 40px !important; }
 
-@media print, screen and (min-width: $md-min) {
+@include mq(mdMin) {
     .mt-xs { margin-top: 10px !important; }
     .mt-sm { margin-top: 20px !important; }
     .mt-md { margin-top: 30px !important; }
