--- a/dev/index.ejs
+++ b/dev/index.ejs
@@ -8,8 +8,12 @@
 include inc/_common_header
 %>
 
-<main id="main">
+<main class="l-main">
 ページの内容
 </main>
+
+<aside class="l-sub">
+サブコンテンツ
+</aside>
 
 <% include inc/_common_footer %>
