Readmeやドキュメントに新しい仕様を記載

--- a/dev/docs/_index.scss
+++ b/dev/docs/_index.scss
@@ -18,6 +18,7 @@ category: index
     - サイト内のコンテンツへは、原則として同一ウインドウ内でのリンク設定にする（target指定なし）
     - 制作対象となるサイトから他サイトのページへリンクを設定する場合、新規の別ウインドウが開くリンク設定をする（target="_blank"）
 - レイアウト:レスポンシブウェブデザイン（<a href="#04-breakpoint">ブレイクポイントは下記参照</a>）
+- CMS : 使用しない
 */
 
 
