グリッドモジュールに等間隔のグリッド作成するための指定を追加

--- a/dev/docs/_layout.scss
+++ b/dev/docs/_layout.scss
@@ -51,24 +51,23 @@ name: 02-grid
 category: layout
 ---
 
-上記のグリッドでも等間隔のグリッドは作れますが、よりシンプルに等間隔のグリッドが作れます。
+上記のやり方でも等間隔のグリッドは作れますが、よりシンプルに等間隔のグリッドが作れます。
 
-全体を `l-tile` で囲って子要素に `l-tile_item` を設定します。
-子要素に幅用の指定を入れる必要はなく、親要素に何カラムにしたいか、`tile-xs-x` `tile-sm-x` `tile-md-x` `tile-lg-x` のように指定していきます。
+子要素は幅用の指定を入れずに、 `l-grid_col` のみで、親要素に、`grid-xs-x` `grid-sm-x` `grid-md-x` `grid-lg-x` のように何カラムにしたいか指定していきます。
 
 例えば、xsサイズでは2カラム、smサイズでは3カラム、mdサイズでは4カラム、lgサイズでは5カラムにする場合は下記のように指定します。
 6カラムまで用意してあります。
 
 ```example
-<div class="l-tile tile-xs-2 tile-sm-3 tile-md-4 tile-lg-5">
-  <div class="l-tile_item">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
-  <div class="l-tile_item">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
-  <div class="l-tile_item">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
-  <div class="l-tile_item">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
-  <div class="l-tile_item">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
-  <div class="l-tile_item">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
-  <div class="l-tile_item">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
-  <div class="l-tile_item">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
+<div class="l-grid grid-xs-2 grid-sm-3 grid-md-4 grid-lg-5">
+  <div class="l-grid_col">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
+  <div class="l-grid_col">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
+  <div class="l-grid_col">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
+  <div class="l-grid_col">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
+  <div class="l-grid_col">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
+  <div class="l-grid_col">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
+  <div class="l-grid_col">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
+  <div class="l-grid_col">コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。コンテンツが入ります。</div>
 </div>
 ```
 
