--- a/dev/assets/scss/module/_grid.scss
+++ b/dev/assets/scss/module/_grid.scss
@@ -13,62 +13,62 @@ $gutter-lg : 32px;
 // グリッド幅の設定
 // ------------------------------------------
 
-.col-xs-1 { width: calc(8.333% - #{$gutter-xs} ); }
-.col-xs-2 { width: calc(16.666% - #{$gutter-xs} ); }
-.col-xs-3 { width: calc(25% - #{$gutter-xs} ); }
-.col-xs-4 { width: calc(33.333% - #{$gutter-xs} ); }
-.col-xs-5 { width: calc(41.666% - #{$gutter-xs} ); }
-.col-xs-6 { width: calc(50% - #{$gutter-xs} ); }
-.col-xs-7 { width: calc(58.333% - #{$gutter-xs} ); }
-.col-xs-8 { width: calc(66.666% - #{$gutter-xs} ); }
-.col-xs-9 { width: calc(75% - #{$gutter-xs} ); }
+.col-xs-1 {   width: calc(8.333% - #{$gutter-xs} ); }
+.col-xs-2 {  width: calc(16.666% - #{$gutter-xs} ); }
+.col-xs-3 {      width: calc(25% - #{$gutter-xs} ); }
+.col-xs-4 {  width: calc(33.333% - #{$gutter-xs} ); }
+.col-xs-5 {  width: calc(41.666% - #{$gutter-xs} ); }
+.col-xs-6 {      width: calc(50% - #{$gutter-xs} ); }
+.col-xs-7 {  width: calc(58.333% - #{$gutter-xs} ); }
+.col-xs-8 {  width: calc(66.666% - #{$gutter-xs} ); }
+.col-xs-9 {      width: calc(75% - #{$gutter-xs} ); }
 .col-xs-10 { width: calc(83.333% - #{$gutter-xs} ); }
 .col-xs-11 { width: calc(91.666% - #{$gutter-xs} ); }
-.col-xs-12 { width: calc(100% - #{$gutter-xs} ); }
+.col-xs-12 {    width: calc(100% - #{$gutter-xs} ); }
 
 @include mq(smMin) {
-.col-sm-1 { width: calc(8.333% - #{$gutter-sm} ); }
-.col-sm-2 { width: calc(16.666% - #{$gutter-sm} ); }
-.col-sm-3 { width: calc(25% - #{$gutter-sm} ); }
-.col-sm-4 { width: calc(33.333% - #{$gutter-sm} ); }
-.col-sm-5 { width: calc(41.666% - #{$gutter-sm} ); }
-.col-sm-6 { width: calc(50% - #{$gutter-sm} ); }
-.col-sm-7 { width: calc(58.333% - #{$gutter-sm} ); }
-.col-sm-8 { width: calc(66.666% - #{$gutter-sm} ); }
-.col-sm-9 { width: calc(75% - #{$gutter-sm} ); }
+.col-sm-1 {   width: calc(8.333% - #{$gutter-sm} ); }
+.col-sm-2 {  width: calc(16.666% - #{$gutter-sm} ); }
+.col-sm-3 {      width: calc(25% - #{$gutter-sm} ); }
+.col-sm-4 {  width: calc(33.333% - #{$gutter-sm} ); }
+.col-sm-5 {  width: calc(41.666% - #{$gutter-sm} ); }
+.col-sm-6 {      width: calc(50% - #{$gutter-sm} ); }
+.col-sm-7 {  width: calc(58.333% - #{$gutter-sm} ); }
+.col-sm-8 {  width: calc(66.666% - #{$gutter-sm} ); }
+.col-sm-9 {      width: calc(75% - #{$gutter-sm} ); }
 .col-sm-10 { width: calc(83.333% - #{$gutter-sm} ); }
 .col-sm-11 { width: calc(91.666% - #{$gutter-sm} ); }
-.col-sm-12 { width: calc(100% - #{$gutter-sm} ); }
+.col-sm-12 {    width: calc(100% - #{$gutter-sm} ); }
 }
 
 @include mq(mdMin) {
-.col-md-1 { width: calc(8.333% - #{$gutter-md} ); }
-.col-md-2 { width: calc(16.666% - #{$gutter-md} ); }
-.col-md-3 { width: calc(25% - #{$gutter-md} ); }
-.col-md-4 { width: calc(33.333% - #{$gutter-md} ); }
-.col-md-5 { width: calc(41.666% - #{$gutter-md} ); }
-.col-md-6 { width: calc(50% - #{$gutter-md} ); }
-.col-md-7 { width: calc(58.333% - #{$gutter-md} ); }
-.col-md-8 { width: calc(66.666% - #{$gutter-md} ); }
-.col-md-9 { width: calc(75% - #{$gutter-md} ); }
+.col-md-1 {   width: calc(8.333% - #{$gutter-md} ); }
+.col-md-2 {  width: calc(16.666% - #{$gutter-md} ); }
+.col-md-3 {      width: calc(25% - #{$gutter-md} ); }
+.col-md-4 {  width: calc(33.333% - #{$gutter-md} ); }
+.col-md-5 {  width: calc(41.666% - #{$gutter-md} ); }
+.col-md-6 {      width: calc(50% - #{$gutter-md} ); }
+.col-md-7 {  width: calc(58.333% - #{$gutter-md} ); }
+.col-md-8 {  width: calc(66.666% - #{$gutter-md} ); }
+.col-md-9 {      width: calc(75% - #{$gutter-md} ); }
 .col-md-10 { width: calc(83.333% - #{$gutter-md} ); }
 .col-md-11 { width: calc(91.666% - #{$gutter-md} ); }
-.col-md-12 { width: calc(100% - #{$gutter-md} ); }
+.col-md-12 {    width: calc(100% - #{$gutter-md} ); }
 }
 
 @include mq(lgMin) {
-.col-lg-1 { width: calc(8.333% - #{$gutter-lg} ); }
-.col-lg-2 { width: calc(16.666% - #{$gutter-lg} ); }
-.col-lg-3 { width: calc(25% - #{$gutter-lg} ); }
-.col-lg-4 { width: calc(33.333% - #{$gutter-lg} ); }
-.col-lg-5 { width: calc(41.666% - #{$gutter-lg} ); }
-.col-lg-6 { width: calc(50% - #{$gutter-lg} ); }
-.col-lg-7 { width: calc(58.333% - #{$gutter-lg} ); }
-.col-lg-8 { width: calc(66.666% - #{$gutter-lg} ); }
-.col-lg-9 { width: calc(75% - #{$gutter-lg} ); }
+.col-lg-1 {   width: calc(8.333% - #{$gutter-lg} ); }
+.col-lg-2 {  width: calc(16.666% - #{$gutter-lg} ); }
+.col-lg-3 {      width: calc(25% - #{$gutter-lg} ); }
+.col-lg-4 {  width: calc(33.333% - #{$gutter-lg} ); }
+.col-lg-5 {  width: calc(41.666% - #{$gutter-lg} ); }
+.col-lg-6 {      width: calc(50% - #{$gutter-lg} ); }
+.col-lg-7 {  width: calc(58.333% - #{$gutter-lg} ); }
+.col-lg-8 {  width: calc(66.666% - #{$gutter-lg} ); }
+.col-lg-9 {      width: calc(75% - #{$gutter-lg} ); }
 .col-lg-10 { width: calc(83.333% - #{$gutter-lg} ); }
 .col-lg-11 { width: calc(91.666% - #{$gutter-lg} ); }
-.col-lg-12 { width: calc(100% - #{$gutter-lg} ); }
+.col-lg-12 {    width: calc(100% - #{$gutter-lg} ); }
 }
 
 
@@ -125,4 +125,43 @@ $gutter-lg : 32px;
         margin-right: $gutter-lg / 2;
     }
 }
+}
+
+
+// ------------------------------------------
+// 均等幅のグリッド
+// ------------------------------------------
+
+.grid-xs-1 > .l-grid_col {    width: calc(100% - #{$gutter-xs} ); }
+.grid-xs-2 > .l-grid_col {     width: calc(50% - #{$gutter-xs} ); }
+.grid-xs-3 > .l-grid_col { width: calc(33.333% - #{$gutter-xs} ); }
+.grid-xs-4 > .l-grid_col {     width: calc(25% - #{$gutter-xs} ); }
+.grid-xs-5 > .l-grid_col {     width: calc(20% - #{$gutter-xs} ); }
+.grid-xs-6 > .l-grid_col { width: calc(16.666% - #{$gutter-xs} ); }
+
+@include mq(smMin) {
+.grid-sm-1 > .l-grid_col {    width: calc(100% - #{$gutter-sm} ); }
+.grid-sm-2 > .l-grid_col {     width: calc(50% - #{$gutter-sm} ); }
+.grid-sm-3 > .l-grid_col { width: calc(33.333% - #{$gutter-sm} ); }
+.grid-sm-4 > .l-grid_col {     width: calc(25% - #{$gutter-sm} ); }
+.grid-sm-5 > .l-grid_col {     width: calc(20% - #{$gutter-sm} ); }
+.grid-sm-6 > .l-grid_col { width: calc(16.666% - #{$gutter-sm} ); }
+}
+
+@include mq(mdMin) {
+.grid-md-1 > .l-grid_col {    width: calc(100% - #{$gutter-md} ); }
+.grid-md-2 > .l-grid_col {     width: calc(50% - #{$gutter-md} ); }
+.grid-md-3 > .l-grid_col { width: calc(33.333% - #{$gutter-md} ); }
+.grid-md-4 > .l-grid_col {     width: calc(25% - #{$gutter-md} ); }
+.grid-md-5 > .l-grid_col {     width: calc(20% - #{$gutter-md} ); }
+.grid-md-6 > .l-grid_col { width: calc(16.666% - #{$gutter-md} ); }
+}
+
+@include mq(lgMin) {
+.grid-lg-1 > .l-grid_col {    width: calc(100% - #{$gutter-lg} ); }
+.grid-lg-2 > .l-grid_col {     width: calc(50% - #{$gutter-lg} ); }
+.grid-lg-3 > .l-grid_col { width: calc(33.333% - #{$gutter-lg} ); }
+.grid-lg-4 > .l-grid_col {     width: calc(25% - #{$gutter-lg} ); }
+.grid-lg-5 > .l-grid_col {     width: calc(20% - #{$gutter-lg} ); }
+.grid-lg-6 > .l-grid_col { width: calc(16.666% - #{$gutter-lg} ); }
 }
