labelにカーソル追加

--- a/dev/assets/scss/base/_setting.scss
+++ b/dev/assets/scss/base/_setting.scss
@@ -57,7 +57,7 @@ img {
 //     border-radius: 0;
 //     outline: none;
 // }
-
+label { cursor: pointer; }
 strong { font-weight: bold; }
 em { font-style: italic;}
 a {
